[gd_scene load_steps=9 format=3 uid="uid://cvftwxr80krae"]

[ext_resource type="Script" path="res://Scripts/chicken_punching.gd" id="1_ll3ss"]
[ext_resource type="PackedScene" uid="uid://cjoarybbdodvg" path="res://Scenes/punch_spawn.tscn" id="2_6ewom"]
[ext_resource type="Texture2D" uid="uid://cdwmxoxnr6xb6" path="res://Assets/random_photos/placeholder_fists.png" id="3_wbab7"]
[ext_resource type="Texture2D" uid="uid://nlpuxfwlb1p" path="res://Assets/random_photos/placeholder_chicken.png" id="4_j4f78"]
[ext_resource type="Texture2D" uid="uid://d27x67bbeg8j4" path="res://Assets/random_photos/placeholder_punch.png" id="5_k6qx7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8a65t"]
size = Vector2(228, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tnn6s"]
size = Vector2(227.5, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csiec"]
size = Vector2(227, 17.5)

[node name="chicken_punching" type="Node2D"]
script = ExtResource("1_ll3ss")

[node name="spawn_punch_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="punch_spawn" parent="." instance=ExtResource("2_6ewom")]
visible = false
position = Vector2(-125, 96)

[node name="perfect_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="perfect_zone"]
position = Vector2(303, 367.5)
shape = SubResource("RectangleShape2D_8a65t")

[node name="meh_zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="meh_zone"]
position = Vector2(303, 352)
shape = SubResource("RectangleShape2D_tnn6s")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="meh_zone"]
position = Vector2(303, 384.25)
shape = SubResource("RectangleShape2D_csiec")

[node name="can_hit_timer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
offset_left = 185.0
offset_top = 355.0
offset_right = 507.0
offset_bottom = 378.0
text = "-----------------------------------------------      <- hit here"

[node name="PlaceholderFists2" type="Sprite2D" parent="."]
position = Vector2(688, 490)
scale = Vector2(2.52035, 2.52035)
texture = ExtResource("3_wbab7")

[node name="PlaceholderChicken" type="Sprite2D" parent="."]
position = Vector2(638, 273)
scale = Vector2(0.526, 0.526)
texture = ExtResource("4_j4f78")

[node name="PlaceholderPunch" type="Sprite2D" parent="."]
visible = false
position = Vector2(631, 405)
scale = Vector2(1.52778, 1.52778)
texture = ExtResource("5_k6qx7")

[node name="Button" type="Button" parent="."]
offset_left = 927.0
offset_top = 96.0
offset_right = 1063.0
offset_bottom = 123.0
text = "start (testing)"

[connection signal="timeout" from="spawn_punch_timer" to="." method="_on_spawn_punch_timer_timeout"]
[connection signal="area_entered" from="perfect_zone" to="." method="_on_perfect_zone_area_entered"]
[connection signal="area_exited" from="perfect_zone" to="." method="_on_perfect_zone_area_exited"]
[connection signal="area_entered" from="meh_zone" to="." method="_on_meh_zone_area_entered"]
[connection signal="area_exited" from="meh_zone" to="." method="_on_meh_zone_area_exited"]
[connection signal="timeout" from="can_hit_timer" to="." method="_on_can_hit_timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
